--- a/account-feeder/docker-compose.yml
+++ b/account-feeder/docker-compose.yml
@@ -7,12 +7,12 @@ services:
       dockerfile: Dockerfile
     container_name: q2api-account-feeder
     ports:
-      - "${FEEDER_PORT:-8001}:${FEEDER_PORT:-8001}"
+      - "${FEEDER_PORT:-8001}:8001"
     env_file:
       - .env
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${FEEDER_PORT:-8001}/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
       timeout: 10s
       retries: 3
