--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
       dockerfile: Dockerfile
     container_name: q2api
     ports:
-      - "${PORT:-8000}:${PORT:-8000}"
+      - "${PORT:-8000}:8000"
     env_file:
       - .env
     volumes:
       - ./:/app
     restart: unless-stopped
-    command: uvicorn app:app --host 0.0.0.0 --port ${PORT:-8000} --workers 4
+    command: uvicorn app:app --host 0.0.0.0 --port 8000 --workers 4
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:${PORT:-8000}/healthz"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/healthz"]
       interval: 30s
       timeout: 10s
       retries: 3
