refactor(auth): switch to password-based auth

--- a/account-feeder/.env.example
+++ b/account-feeder/.env.example
@@ -11,3 +11,6 @@ API_SERVER=http://localhost:8000
 # HTTP代理设置（留空不使用代理）
 # 例如：HTTP_PROXY="http://127.0.0.1:7890"
 HTTP_PROXY=""
+
+# 主服务密码
+API_SERVER_PASSWORD=
